@@ -2,6 +2,8 @@ build_shared_lib.pl
 Changes
 lib/SPVM.pm
 lib/SPVM/Build.pm
+lib/SPVM/Byte.pm
+lib/SPVM/Byte.spvm
 lib/SPVM/Debug.pm
 lib/SPVM/Document/Cookbook.pod
 lib/SPVM/Document/Extension.pod
