@@ -1,0 +1,12 @@
+package Byte {
+  
+  has value : byte;
+  
+  enum {
+    MIN_VALUE = -128
+    MAX_VALUE = 127,
+    BYTES = 1,
+    SIZE = 8,
+    BYTES = 1
+  }
+}
